fixed z-index footer

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   padding: 35px 0;
   position: relative;
-  z-index: 10;
+  z-index: 42;
   background-color: var(--light-color);
 
   &.footer-z {
